<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>ai.floedb.metacat</groupId>
    <artifactId>metacat</artifactId>
    <version>0.1.0-SNAPSHOT</version>
  </parent>

  <artifactId>metacat-service</artifactId>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <iceberg.version>1.9.2</iceberg.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus.platform</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.platform.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-arc</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-grpc</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-opentelemetry</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-micrometer</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-logging-json</artifactId>
    </dependency>

    <dependency>
      <groupId>com.github.ben-manes.caffeine</groupId>
      <artifactId>caffeine</artifactId>
      <version>3.2.2</version>
    </dependency>

    <dependency>
      <groupId>org.jboss.slf4j</groupId>
      <artifactId>slf4j-jboss-logmanager</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-junit5</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.26.3</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>ai.floedb.metacat</groupId>
      <artifactId>metacat-proto</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>ai.floedb.metacat</groupId>
      <artifactId>metacat-types</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>ai.floedb.metacat</groupId>
      <artifactId>metacat-connectors-spi</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>ai.floedb.metacat</groupId>
      <artifactId>metacat-connectors-iceberg</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>ai.floedb.metacat</groupId>
      <artifactId>metacat-reconciler</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>ai.floedb.metacat</groupId>
      <artifactId>metacat-storage-spi</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>ai.floedb.metacat</groupId>
      <artifactId>metacat-storage-memory</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>ai.floedb.metacat</groupId>
      <artifactId>metacat-storage-aws</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>org.jboss.logmanager</groupId>
      <artifactId>jboss-logmanager</artifactId>
      <version>3.1.2.Final</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-maven-plugin</artifactId>
        <version>${quarkus.platform.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>build</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.1</version>
        <configuration>
          <release>25</release>
          <annotationProcessorPaths>
            <path>
              <groupId>io.quarkus</groupId>
              <artifactId>quarkus-extension-processor</artifactId>
              <version>${quarkus.platform.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>io.smallrye</groupId>
        <artifactId>jandex-maven-plugin</artifactId>
        <version>3.5.1</version>
        <executions>
          <execution>
            <id>make-index</id>
            <goals>
              <goal>jandex</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.4</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <skipTests>${skipUTs}</skipTests>
          <useSystemClassLoader>false</useSystemClassLoader>
          <argLine>
            --add-opens java.base/java.lang=ALL-UNNAMED -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Dcom.google.protobuf.useUnsafe=false -Dio.netty.noUnsafe=true
          </argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.5.4</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <includes>
            <include>**/*IT.java</include>
          </includes>

          <skipITs>${skipITs}</skipITs>

          <failIfNoTests>false</failIfNoTests>

          <useSystemClassLoader>false</useSystemClassLoader>
          <argLine>
            --add-opens java.base/java.lang=ALL-UNNAMED -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Dcom.google.protobuf.useUnsafe=false -Dio.netty.noUnsafe=true
          </argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>